--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation("org.assertj:assertj-core:3.26.3")
+
+    implementation 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testCompileOnly('org.projectlombok:lombok:1.18.36')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.36')
 }
 
 test {
